--- a/portfolio/scss/styles.scss
+++ b/portfolio/scss/styles.scss
@@ -1,5 +1,11 @@
 // GENERAL STYLES
 
+$dark-blue-color: #082841;
+$coral-color: #dd3e18;
+$darker-coral-color: darken($coral-color, 15%);
+$light-green-color-1: #e6f0f0;
+$light-green-color-2: #e9f0e6;
+
 * {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
@@ -17,6 +23,16 @@ p {
   line-height: 28px;
 }
 
+a {
+  color: $coral-color;
+  font-size: 16px;
+  text-decoration: none;
+
+  &:hover {
+    color: $darker-coral-color;
+  }
+}
+
 main,
 footer {
   max-width: 1000px;
@@ -28,7 +44,7 @@ footer {
 .header {
   display: flex;
   flex-direction: row;
-  background-color: #082841;
+  background-color: $dark-blue-color;
 
   .photo {
     min-width: 552px;
@@ -62,7 +78,7 @@ footer {
       flex: 0 0 calc(50% - 40px);
       margin: 10px;
       padding: 5px 10px;
-      background: linear-gradient(to bottom right, #e6f0f0, #e9f0e6);
+      background: linear-gradient(to bottom right, $light-green-color-1, $light-green-color-2);
     }
 
     .freedom {
@@ -82,3 +98,5 @@ footer {
     }
   }
 }
+
+// SECTION WORKS
