--- a/portfolio/css/styles.css
+++ b/portfolio/css/styles.css
@@ -3,12 +3,13 @@
   font-size: 20px; }
 
 h4 {
-  font-size: 24px; }
+  font-size: 1.1rem; }
 
 h2 {
-  font-size: 40px; }
+  font-size: 1.3rem; }
 
 p {
+  font-size: 0.7rem;
   line-height: 28px; }
 
 a {
@@ -28,16 +29,19 @@ footer {
   flex-direction: row;
   background-color: #082841; }
   .header .photo {
-    min-width: 552px;
-    min-height: 672px;
-    padding: 0 100px;
-    background: url("../assets/me.jpg") no-repeat center;
-    background-size: cover; }
+    min-width: 50%;
+    min-height: 300px;
+    background: url("../assets/me.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center top; }
   .header .intro {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin: 0 40px;
+    min-width: calc(50% - 40px);
+    min-height: 500px;
+    padding: 0 20px;
     color: #fff; }
 
 .expectations p {
