--- a/portfolio/scss/styles.scss
+++ b/portfolio/scss/styles.scss
@@ -12,14 +12,15 @@ $light-green-color-2: #e9f0e6;
 }
 
 h4 {
-  font-size: 24px;
+  font-size: 1.1rem;
 }
 
 h2 {
-  font-size: 40px;
+  font-size: 1.3rem;
 }
 
 p {
+  font-size: 0.7rem;
   line-height: 28px;
 }
 
@@ -47,18 +48,21 @@ footer {
   background-color: $dark-blue-color;
 
   .photo {
-    min-width: 552px;
-    min-height: 672px;
-    padding: 0 100px;
-    background: url('../assets/me.jpg') no-repeat center;
+    min-width: 50%;
+    min-height: 300px;
+    background: url('../assets/me.jpg');
     background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center top;
   }
 
   .intro {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin: 0 40px;
+    min-width: calc(50% - 40px);
+    min-height: 500px;
+    padding: 0 20px;
     color: #fff;
   }
 }
