--- a/portfolio/scss/styles.scss
+++ b/portfolio/scss/styles.scss
@@ -6,21 +6,21 @@ $darker-coral-color: darken($coral-color, 15%);
 $light-green-color-1: #e6f0f0;
 $light-green-color-2: #e9f0e6;
 
-* {
+body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
 }
 
 h4 {
-  font-size: 1.1rem;
-}
-
-h2 {
   font-size: 1.3rem;
 }
 
+h2 {
+  font-size: 2rem;
+}
+
 p {
-  font-size: 0.7rem;
+  font-size: 1rem;
   line-height: 28px;
 }
 
@@ -104,3 +104,11 @@ footer {
 }
 
 // SECTION WORKS
+
+// MEDIA QUERIES
+
+@media screen and (max-width: 768px) {
+  .header {
+    flex-direction: column;
+  }
+}
