--- a/portfolio/scss/_header.scss
+++ b/portfolio/scss/_header.scss
@@ -3,7 +3,7 @@
   flex-direction: row;
   background-color: $dark-blue-color;
 
-  .photo {
+  &__photo {
     min-width: 50%;
     min-height: 300px;
     background: url('../assets/me.jpg');
@@ -12,7 +12,7 @@
     background-position: center top;
   }
 
-  .intro {
+  &__intro {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
