--- a/portfolio/css/styles.css
+++ b/portfolio/css/styles.css
@@ -1,6 +1,7 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 20px; }
+  font-size: 20px;
+  margin: 0; }
 
 h4 {
   font-size: 1.3rem; }
