Define basic grid layout

--- a/portfolio/scss/_expectations.scss
+++ b/portfolio/scss/_expectations.scss
@@ -4,9 +4,9 @@
   }
 
   &__grid {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
+    // display: flex;
+    // align-items: center;
+    // flex-wrap: wrap;
     padding: 10px;
 
     &__item {
