--- a/portfolio/css/styles.css
+++ b/portfolio/css/styles.css
@@ -20,11 +20,18 @@ a {
   a:hover {
     color: #982b11; }
 
-main {
-  max-width: 1000px;
-  margin: 0 auto; }
+.container {
+  height: 100%;
+  display: grid;
+  grid-template-columns: minmax(30px, 300px) 1fr minmax(30px, 300px);
+  grid-template-rows: repeat(3, auto);
+  grid-template-areas: 'h h h' '. c .' 'f f f'; }
+
+.content {
+  grid-area: c; }
 
 .header {
+  grid-area: h;
   display: flex;
   flex-direction: row;
   background-color: #082841; }
@@ -50,9 +57,6 @@ main {
 .expectations p {
   font-size: 16px; }
 .expectations__grid {
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
   padding: 10px; }
   .expectations__grid__item {
     margin: 10px;
@@ -68,6 +72,7 @@ main {
     flex: 0 0 calc(70% - 40px); }
 
 .footer {
+  grid-area: f;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -96,9 +101,10 @@ main {
   font-size: 1rem;
   margin-left: 30px; }
   .form__submit, .form__input, .form__textarea {
+    min-width: 350px;
     border: none;
     border-radius: 4px;
-    min-width: 350px; }
+    font-family: Arial, Helvetica, sans-serif; }
   .form__input, .form__textarea {
     margin-bottom: 15px;
     padding: 15px 10px; }
