--- a/portfolio/scss/_footer.scss
+++ b/portfolio/scss/_footer.scss
@@ -1,4 +1,5 @@
 .footer {
+  grid-area: f;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -41,9 +42,10 @@
   &__submit,
   &__input,
   &__textarea {
+    min-width: 350px;
     border: none;
     border-radius: 4px;
-    min-width: 350px;
+    font-family: Arial, Helvetica, sans-serif;
   }
 
   &__input,
