--- a/portfolio/scss/main.scss
+++ b/portfolio/scss/main.scss
@@ -1,5 +1,6 @@
 @import '_variables.scss';
 @import '_general.scss';
+@import '_grid.scss';
 @import '_header.scss';
 @import '_expectations.scss';
 @import '_works.scss';
