--- a/portfolio/scss/_general.scss
+++ b/portfolio/scss/_general.scss
@@ -6,13 +6,16 @@ body {
 
 h4 {
   font-size: 1.3rem;
+  margin: 0;
 }
 
 h2 {
   font-size: 2rem;
+  margin: 0;
 }
 
 p {
+  font-family: Georgia;
   font-size: 1rem;
   line-height: 28px;
 }
