--- a/portfolio/scss/_works.scss
+++ b/portfolio/scss/_works.scss
@@ -1,8 +1,9 @@
 .works {
   display: grid;
-  grid-gap: 10px;
+  grid-gap: 20px;
   grid-template-columns: auto auto;
   grid-template-rows: repeat(4, auto);
+  padding-bottom: 100px;
 
   &__item {
     grid-column: 1 / -1;
