--- a/portfolio/css/styles.css
+++ b/portfolio/css/styles.css
@@ -14,7 +14,8 @@ h2 {
 p {
   font-family: Georgia;
   font-size: 1rem;
-  line-height: 28px; }
+  line-height: 28px;
+  margin: 0; }
 
 a {
   color: #dd3e18;
@@ -92,7 +93,7 @@ a {
     grid-gap: 10px;
     padding-top: 20px; }
     .expectations__grid__item {
-      padding: 5px 10px;
+      padding: 5px 10px 15px;
       background: linear-gradient(to bottom right, #e6f0f0, #e9f0e6); }
     .expectations__grid__item:nth-child(1) {
       grid-column: 1 / 9;
@@ -107,27 +108,125 @@ a {
       grid-column: 6 / 13;
       grid-row: 2 /3; }
 
+@media screen and (max-width: 375px) {
+  .expectations {
+    padding: 50px 0; }
+
+  .expectations__grid__item:nth-child(1) {
+    grid-column: 1 / -1;
+    grid-row: 1 / -1; }
+
+  .expectations__grid__item:nth-child(2) {
+    display: none; }
+
+  .expectations__grid__item:nth-child(3) {
+    display: none; }
+
+  .expectations__grid__item:nth-child(4) {
+    display: none; } }
 .works {
   display: grid;
   grid-gap: 20px;
-  grid-template-columns: auto auto;
-  grid-template-rows: repeat(4, auto);
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 50px auto auto auto;
   padding-bottom: 100px; }
+  .works__title {
+    grid-column: 1 / -1;
+    grid-row: 1 / 2; }
   .works__item {
     grid-column: 1 / -1;
     grid-row: auto;
     display: flex;
     flex-direction: row; }
     .works__item__description {
-      flex: 1;
-      padding: 0; }
+      padding: 0 20px 0 0;
+      text-align: justify; }
     .works__item__image {
       object-fit: contain;
       max-height: 300px;
-      max-width: 250px;
+      max-width: 500px;
       margin-right: 20px; }
   .works__item:nth-child(odd) {
     flex-direction: row-reverse; }
+
+@media screen and (max-width: 768px) {
+  .works__item {
+    flex-direction: column; }
+    .works__item__description {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      order: 1; }
+      .works__item__description__meta {
+        min-width: 30%; }
+    .works__item__image {
+      order: 3;
+      margin-right: 0;
+      padding: 20px 100px; }
+
+  .works__item:nth-child(odd) {
+    flex-direction: column; }
+
+  .tags {
+    order: 2; } }
+@media screen and (max-width: 375px) {
+  .works__item__description {
+    flex-direction: column;
+    justify-content: flex-start; }
+
+  .works__item__description__meta {
+    min-width: 40%;
+    padding-bottom: 30px; }
+
+  .works__item__image {
+    padding: 20px 0; }
+
+  .tags {
+    flex-wrap: wrap; } }
+.tags {
+  display: flex;
+  flex-direction: row;
+  padding: 20px 0 0 0;
+  margin: 0;
+  list-style: none;
+  overflow: hidden; }
+  .tags__tag {
+    position: relative;
+    display: inline-block;
+    height: 26px;
+    padding: 0 20px 0 23px;
+    margin: 0 10px 10px 0;
+    background: #eee;
+    color: #999;
+    line-height: 26px;
+    text-decoration: none;
+    transition: color 0.2s;
+    border-radius: 3px 0 0 3px;
+    cursor: pointer; }
+    .tags__tag::before {
+      content: '';
+      position: absolute;
+      width: 6px;
+      height: 6px;
+      top: 10px;
+      left: 10px;
+      background: #fff;
+      border-radius: 10px;
+      box-shadow: inset 0 1px rgba(0, 0, 0, 0.25); }
+    .tags__tag::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      right: 0;
+      background: #fff;
+      border-top: 13px solid transparent;
+      border-bottom: 13px solid transparent;
+      border-left: 10px solid #eee; }
+    .tags__tag:hover {
+      background-color: #dd3e18;
+      color: #fff; }
+    .tags__tag:hover::after {
+      border-left-color: #dd3e18; }
 
 .footer {
   grid-area: f;
@@ -138,10 +237,12 @@ a {
   background: linear-gradient(to bottom right, #e6f0f0, #e9f0e6); }
   .footer__title {
     grid-column: 1 / -1;
-    grid-row: 1 / 2; }
+    grid-row: 1 / 2;
+    padding-bottom: 30px; }
   .footer__description {
     grid-column: 1 / 2;
-    grid-row: 2 / 3; }
+    grid-row: 2 / 3;
+    text-align: justify; }
   .footer__links {
     grid-column: 1 / 2;
     grid-row: 3 / 4;
@@ -203,11 +304,31 @@ a {
       z-index: -1; }
 
 @media screen and (max-width: 768px) {
+  .footer {
+    padding: 100px 30px; }
+    .footer__description {
+      padding-right: 50px; }
+
   .form {
     margin-top: 15px;
     margin-left: 0;
     padding-left: 0; }
     .form__submit, .form__input, .form__textarea {
       min-width: 0; } }
+@media screen and (max-width: 375px) {
+  .footer {
+    padding: 50px 30px; }
+    .footer__title {
+      padding-bottom: 0; }
+    .footer__description {
+      grid-row: 3 / 4;
+      grid-column: 1 / -1; }
+    .footer__links {
+      grid-row: 2 / 3;
+      grid-column: 1 / -1; }
+
+  .form {
+    grid-row: 4 / 5;
+    grid-column: 1 / -1; } }
 
 /*# sourceMappingURL=styles.css.map */
