--- a/portfolio/scss/_expectations.scss
+++ b/portfolio/scss/_expectations.scss
@@ -9,7 +9,7 @@
     padding-top: 20px;
 
     &__item {
-      padding: 5px 10px;
+      padding: 5px 10px 15px;
       background: linear-gradient(to bottom right, $light-green-color-1, $light-green-color-2);
     }
 
@@ -32,5 +32,28 @@
       grid-column: 6 / 13;
       grid-row: 2 /3;
     }
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .expectations {
+    padding: 50px 0;
+  }
+
+  .expectations__grid__item:nth-child(1) {
+    grid-column: 1 / -1;
+    grid-row: 1 / -1;
+  }
+
+  .expectations__grid__item:nth-child(2) {
+    display: none;
+  }
+
+  .expectations__grid__item:nth-child(3) {
+    display: none;
+  }
+
+  .expectations__grid__item:nth-child(4) {
+    display: none;
   }
 }
