--- a/portfolio/scss/_works.scss
+++ b/portfolio/scss/_works.scss
@@ -1,9 +1,14 @@
 .works {
   display: grid;
   grid-gap: 20px;
-  grid-template-columns: auto auto;
-  grid-template-rows: repeat(4, auto);
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 50px auto auto auto;
   padding-bottom: 100px;
+
+  &__title {
+    grid-column: 1 / -1;
+    grid-row: 1 / 2;
+  }
 
   &__item {
     grid-column: 1 / -1;
@@ -13,19 +18,125 @@
     flex-direction: row;
 
     &__description {
-      flex: 1;
-      padding: 0;
+      padding: 0 20px 0 0;
+      text-align: justify;
     }
 
     &__image {
       object-fit: contain;
       max-height: 300px;
-      max-width: 250px;
+      max-width: 500px;
       margin-right: 20px;
     }
   }
 
   &__item:nth-child(odd) {
     flex-direction: row-reverse;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .works__item {
+    flex-direction: column;
+
+    &__description {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      order: 1;
+
+      &__meta {
+        min-width: 30%;
+      }
+    }
+
+    &__image {
+      order: 3;
+      margin-right: 0;
+      padding: 20px 100px;
+    }
+  }
+
+  .works__item:nth-child(odd) {
+    flex-direction: column;
+  }
+
+  .tags {
+    order: 2;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .works__item {
+    &__description {
+      flex-direction: column;
+      justify-content: flex-start;
+    }
+  }
+  .works__item__description__meta {
+    min-width: 40%;
+    padding-bottom: 30px;
+  }
+  .works__item__image {
+    padding: 20px 0;
+  }
+
+  .tags {
+    flex-wrap: wrap;
+  }
+}
+
+.tags {
+  display: flex;
+  flex-direction: row;
+  padding: 20px 0 0 0;
+  margin: 0;
+  list-style: none;
+  overflow: hidden;
+  &__tag {
+    position: relative;
+    display: inline-block;
+    height: 26px;
+    padding: 0 20px 0 23px;
+    margin: 0 10px 10px 0;
+    background: #eee;
+    color: #999;
+    line-height: 26px;
+    text-decoration: none;
+    transition: color 0.2s;
+    border-radius: 3px 0 0 3px;
+    cursor: pointer;
+
+    &::before {
+      content: '';
+      position: absolute;
+      width: 6px;
+      height: 6px;
+      top: 10px;
+      left: 10px;
+      background: #fff;
+      border-radius: 10px;
+      box-shadow: inset 0 1px rgba(0, 0, 0, 0.25);
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      right: 0;
+      background: #fff;
+      border-top: 13px solid transparent;
+      border-bottom: 13px solid transparent;
+      border-left: 10px solid #eee;
+    }
+
+    &:hover {
+      background-color: $coral-color;
+      color: #fff;
+    }
+
+    &:hover::after {
+      border-left-color: $coral-color;
+    }
   }
 }
