--- a/portfolio/scss/_grid.scss
+++ b/portfolio/scss/_grid.scss
@@ -14,6 +14,12 @@
   padding: 0 200px;
 }
 
+@media screen and (max-width: 1024px) {
+  .content {
+    padding: 0 30px;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .content {
     padding: 0 30px;
