--- a/portfolio/css/styles.css
+++ b/portfolio/css/styles.css
@@ -130,8 +130,8 @@ a {
 .works {
   display: grid;
   grid-gap: 20px;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 30px auto auto auto;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 30px repeat(3, auto);
   padding-bottom: 100px; }
   .works__title {
     grid-column: 1 / -1;
@@ -139,130 +139,61 @@ a {
   .works__item {
     grid-column: 1 / -1;
     grid-row: auto;
-    display: flex;
-    flex-direction: row; }
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-template-rows: repeat(4, auto); }
+    .works__item__image {
+      grid-column: 1 / 2;
+      grid-row: 1 / -1; }
+      .works__item__image.right {
+        grid-column: 2 / 3; }
     .works__item__description {
+      grid-column: 2 / 3;
+      grid-row: 1 / 4;
       padding: 0 20px 0 0;
       text-align: justify; }
-    .works__item__image {
-      object-fit: contain;
-      max-height: 300px;
-      max-width: 500px;
-      margin-right: 20px; }
-  .works__item:nth-child(odd) {
-    flex-direction: row-reverse; }
+      .works__item__description.right {
+        grid-column: 1 / 2; }
+    .works__item__tags {
+      grid-column: 2 / 3;
+      grid-row: 4 / 5; }
+      .works__item__tags.right {
+        grid-column: 1 / 2; }
 
 @media screen and (max-width: 768px) {
-  .works__item {
-    flex-direction: column; }
-    .works__item__description {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      order: 1; }
-      .works__item__description__meta {
-        min-width: 30%; }
-    .works__item__image {
-      order: 3;
-      margin-right: 0;
-      padding: 20px 100px; }
-
-  .works__item:nth-child(odd) {
-    flex-direction: column; }
-
-  .tags {
-    order: 2; } }
-@media screen and (max-width: 375px) {
-  .works__item__description {
-    flex-direction: column;
-    justify-content: flex-start; }
-
-  .works__item__description__meta {
-    min-width: 40%;
-    padding-bottom: 30px; }
-
-  .works__item__image {
-    padding: 20px 0; }
-
-  .tags {
-    flex-wrap: wrap; } }
-.tags {
-  display: flex;
-  flex-direction: row;
-  padding: 20px 0 0 0;
-  margin: 0;
-  list-style: none;
-  overflow: hidden; }
-  .tags__tag {
-    position: relative;
-    display: inline-block;
-    height: 26px;
-    padding: 0 20px 0 23px;
-    margin: 0 10px 10px 0;
-    background: #eee;
-    color: #999;
-    line-height: 26px;
-    text-decoration: none;
-    transition: color 0.2s;
-    border-radius: 3px 0 0 3px;
-    cursor: pointer; }
-    .tags__tag::before {
-      content: '';
-      position: absolute;
-      width: 6px;
-      height: 6px;
-      top: 10px;
-      left: 10px;
-      background: #fff;
-      border-radius: 10px;
-      box-shadow: inset 0 1px rgba(0, 0, 0, 0.25); }
-    .tags__tag::after {
-      content: '';
-      position: absolute;
-      top: 0;
-      right: 0;
-      background: #fff;
-      border-top: 13px solid transparent;
-      border-bottom: 13px solid transparent;
-      border-left: 10px solid #eee; }
-    .tags__tag:hover {
-      background-color: #dd3e18;
-      color: #fff; }
-    .tags__tag:hover::after {
-      border-left-color: #dd3e18; }
-
-.footer {
-  grid-area: f;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(3, auto);
-  padding: 100px 200px;
-  background: linear-gradient(to bottom right, #e6f0f0, #e9f0e6); }
-  .footer__title {
+  .works__item__image, .works__item__image.right {
+    grid-column: 1 / -1;
+    grid-row: 2 / 4;
+    justify-self: center; }
+  .works__item__description, .works__item__description.right {
     grid-column: 1 / -1;
     grid-row: 1 / 2;
-    padding-bottom: 30px; }
-  .footer__description {
-    grid-column: 1 / 2;
-    grid-row: 2 / 3;
-    text-align: justify; }
-  .footer__links {
-    grid-column: 1 / 2;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between; }
+    .works__item__description__meta, .works__item__description.right__meta {
+      min-width: 30%; }
+  .works__item__tags, .works__item__tags.right {
+    grid-column: 1 / -1;
+    grid-row: 4 / 5;
+    flex-wrap: nowrap; } }
+@media screen and (max-width: 375px) {
+  .works__item__image, .works__item__image.right {
+    grid-column: 1 / -1;
     grid-row: 3 / 4;
-    padding: 0;
-    list-style: none; }
-    .footer__links__link {
-      padding: 5px 0; }
-      .footer__links__link__icon {
-        max-width: 18px;
-        height: auto;
-        opacity: 0.2;
-        cursor: pointer; }
-        .footer__links__link__icon:hover {
-          opacity: 0.6; }
-    .footer__links li a {
-      margin-left: 10px; }
-
+    padding: 20px 0; }
+  .works__item__description, .works__item__description.right {
+    grid-column: 1 / -1;
+    grid-row: 1 / 3;
+    flex-direction: column;
+    justify-content: flex-start; }
+    .works__item__description__meta, .works__item__description.right__meta {
+      min-width: 40%;
+      padding-bottom: 30px; }
+  .works__item__tags, .works__item__tags.right {
+    grid-column: 1 / -1;
+    grid-row: 4 / 5;
+    flex-wrap: wrap; } }
 .form {
   grid-column: 2 / 3;
   grid-row: 2 / 4;
@@ -306,6 +237,49 @@ a {
       position: absolute;
       z-index: -1; }
 
+@media screen and (max-width: 768px) {
+  .form {
+    margin-top: 15px;
+    margin-left: 0;
+    padding-left: 0; }
+    .form__submit, .form__input, .form__textarea {
+      min-width: 0; } }
+@media screen and (max-width: 375px) {
+  .form {
+    grid-row: 4 / 5;
+    grid-column: 1 / -1; } }
+.footer {
+  grid-area: f;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, auto);
+  padding: 100px 200px;
+  background: linear-gradient(to bottom right, #e6f0f0, #e9f0e6); }
+  .footer__title {
+    grid-column: 1 / -1;
+    grid-row: 1 / 2;
+    padding-bottom: 30px; }
+  .footer__description {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    text-align: justify; }
+  .footer__links {
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+    padding: 0;
+    list-style: none; }
+    .footer__links__link {
+      padding: 5px 0; }
+      .footer__links__link__icon {
+        max-width: 18px;
+        height: auto;
+        opacity: 0.2;
+        cursor: pointer; }
+        .footer__links__link__icon:hover {
+          opacity: 0.6; }
+    .footer__links li a {
+      margin-left: 10px; }
+
 @media screen and (max-width: 1024px) {
   .footer {
     padding: 100px 30px; } }
@@ -313,14 +287,7 @@ a {
   .footer {
     padding: 100px 30px; }
     .footer__description {
-      padding-right: 50px; }
-
-  .form {
-    margin-top: 15px;
-    margin-left: 0;
-    padding-left: 0; }
-    .form__submit, .form__input, .form__textarea {
-      min-width: 0; } }
+      padding-right: 50px; } }
 @media screen and (max-width: 375px) {
   .footer {
     padding: 50px 30px; }
@@ -331,10 +298,113 @@ a {
       grid-column: 1 / -1; }
     .footer__links {
       grid-row: 2 / 3;
-      grid-column: 1 / -1; }
+      grid-column: 1 / -1; } }
+.slider {
+  display: flex;
+  flex-direction: row-reverse; }
+  .slider__links {
+    height: 300px;
+    padding: 0 20px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; }
+    .slider__links__link {
+      width: 8px;
+      height: 8px;
+      text-decoration: none;
+      border-radius: 50%;
+      margin: 0 0 0.5rem 0; }
+      .slider__links__link:active {
+        background-color: #000; }
+      .slider__links__link:link {
+        background: #dd3e18; }
+  .slider__slides {
+    max-width: 500px;
+    height: 300px;
+    display: flex;
+    overflow-x: hidden;
+    scroll-behavior: smooth; }
+    .slider__slides__slide {
+      max-width: 500px;
+      height: 100%;
+      flex-shrink: 0;
+      object-fit: contain;
+      position: relative;
+      animation: 10s slidy infinite; }
 
-  .form {
-    grid-row: 4 / 5;
-    grid-column: 1 / -1; } }
+@keyframes slidy {
+  0% {
+    left: 0%; }
+  20% {
+    left: 0%; }
+  25% {
+    left: -100%; }
+  45% {
+    left: -100%; }
+  50% {
+    left: -200%; }
+  70% {
+    left: -200%; }
+  100% {
+    left: 0; } }
+@media screen and (max-width: 768px) {
+  .slider {
+    flex-direction: column-reverse; }
+    .slider__links {
+      height: auto;
+      flex-direction: row; }
+      .slider__links__link {
+        margin: 0.5rem 0.5rem; } }
+@media screen and (max-width: 375px) {
+  .slider__slides {
+    max-width: 300px; }
+    .slider__slides__slide {
+      max-width: 300px; } }
+.tags {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 20px 0 0 0;
+  margin: 0;
+  list-style: none;
+  overflow: hidden; }
+  .tags__tag {
+    position: relative;
+    display: inline-block;
+    height: 26px;
+    padding: 0 20px 0 23px;
+    margin: 0 10px 10px 0;
+    background: #eee;
+    color: #999;
+    line-height: 26px;
+    text-decoration: none;
+    transition: color 0.2s;
+    border-radius: 3px 0 0 3px;
+    cursor: pointer; }
+    .tags__tag::before {
+      content: '';
+      position: absolute;
+      width: 6px;
+      height: 6px;
+      top: 10px;
+      left: 10px;
+      background: #fff;
+      border-radius: 10px;
+      box-shadow: inset 0 1px rgba(0, 0, 0, 0.25); }
+    .tags__tag::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      right: 0;
+      background: #fff;
+      border-top: 13px solid transparent;
+      border-bottom: 13px solid transparent;
+      border-left: 10px solid #eee; }
+    .tags__tag:hover {
+      background-color: #dd3e18;
+      color: #fff; }
+    .tags__tag:hover::after {
+      border-left-color: #dd3e18; }
 
 /*# sourceMappingURL=styles.css.map */
