--- a/portfolio/scss/_works.scss
+++ b/portfolio/scss/_works.scss
@@ -1,8 +1,8 @@
 .works {
   display: grid;
   grid-gap: 20px;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 30px auto auto auto;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 30px repeat(3, auto);
   padding-bottom: 100px;
 
   &__title {
@@ -14,129 +14,96 @@
     grid-column: 1 / -1;
     grid-row: auto;
 
-    display: flex;
-    flex-direction: row;
-
-    &__description {
-      padding: 0 20px 0 0;
-      text-align: justify;
-    }
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-template-rows: repeat(4, auto);
 
     &__image {
-      object-fit: contain;
-      max-height: 300px;
-      max-width: 500px;
-      margin-right: 20px;
+      grid-column: 1 / 2;
+      grid-row: 1 / -1;
+      &.right {
+        grid-column: 2 / 3;
+      }
     }
-  }
 
-  &__item:nth-child(odd) {
-    flex-direction: row-reverse;
+    &__description {
+      grid-column: 2 / 3;
+      grid-row: 1 / 4;
+      padding: 0 20px 0 0;
+      text-align: justify;
+      &.right {
+        grid-column: 1 / 2;
+      }
+    }
+
+    &__tags {
+      grid-column: 2 / 3;
+      grid-row: 4 / 5;
+      &.right {
+        grid-column: 1 / 2;
+      }
+    }
   }
 }
 
 @media screen and (max-width: 768px) {
   .works__item {
-    flex-direction: column;
+    &__image,
+    &__image.right {
+      grid-column: 1 / -1;
+      grid-row: 2 / 4;
+      justify-self: center;
+    }
 
-    &__description {
+    &__description,
+    &__description.right {
+      grid-column: 1 / -1;
+      grid-row: 1 / 2;
       display: flex;
       flex-direction: row;
       justify-content: space-between;
-      order: 1;
 
       &__meta {
         min-width: 30%;
       }
     }
 
-    &__image {
-      order: 3;
-      margin-right: 0;
-      padding: 20px 100px;
+    &__tags,
+    &__tags.right {
+      grid-column: 1 / -1;
+      grid-row: 4 / 5;
+      flex-wrap: nowrap;
     }
-  }
-
-  .works__item:nth-child(odd) {
-    flex-direction: column;
-  }
-
-  .tags {
-    order: 2;
   }
 }
 
 @media screen and (max-width: 375px) {
   .works__item {
-    &__description {
+    &__image,
+    &__image.right {
+      grid-column: 1 / -1;
+      grid-row: 3 / 4;
+      padding: 20px 0;
+    }
+
+    &__description,
+    &__description.right {
+      grid-column: 1 / -1;
+      grid-row: 1 / 3;
       flex-direction: column;
       justify-content: flex-start;
-    }
-  }
-  .works__item__description__meta {
-    min-width: 40%;
-    padding-bottom: 30px;
-  }
-  .works__item__image {
-    padding: 20px 0;
-  }
 
-  .tags {
-    flex-wrap: wrap;
-  }
-}
-
-.tags {
-  display: flex;
-  flex-direction: row;
-  padding: 20px 0 0 0;
-  margin: 0;
-  list-style: none;
-  overflow: hidden;
-  &__tag {
-    position: relative;
-    display: inline-block;
-    height: 26px;
-    padding: 0 20px 0 23px;
-    margin: 0 10px 10px 0;
-    background: #eee;
-    color: #999;
-    line-height: 26px;
-    text-decoration: none;
-    transition: color 0.2s;
-    border-radius: 3px 0 0 3px;
-    cursor: pointer;
-
-    &::before {
-      content: '';
-      position: absolute;
-      width: 6px;
-      height: 6px;
-      top: 10px;
-      left: 10px;
-      background: #fff;
-      border-radius: 10px;
-      box-shadow: inset 0 1px rgba(0, 0, 0, 0.25);
+      &__meta {
+        min-width: 40%;
+        padding-bottom: 30px;
+      }
     }
 
-    &::after {
-      content: '';
-      position: absolute;
-      top: 0;
-      right: 0;
-      background: #fff;
-      border-top: 13px solid transparent;
-      border-bottom: 13px solid transparent;
-      border-left: 10px solid #eee;
-    }
-
-    &:hover {
-      background-color: $coral-color;
-      color: #fff;
-    }
-
-    &:hover::after {
-      border-left-color: $coral-color;
+    &__tags,
+    &__tags.right {
+      grid-column: 1 / -1;
+      grid-row: 4 / 5;
+      flex-wrap: wrap;
     }
   }
 }
