--- a/portfolio/scss/main.scss
+++ b/portfolio/scss/main.scss
@@ -4,4 +4,7 @@
 @import '_header.scss';
 @import '_expectations.scss';
 @import '_works.scss';
+@import '_form.scss';
 @import '_footer.scss';
+@import '_slider.scss';
+@import '_tags.scss';
