--- a/portfolio/scss/_expectations.scss
+++ b/portfolio/scss/_expectations.scss
@@ -25,12 +25,12 @@
 
     &__item:nth-child(3) {
       grid-column: 1 / 6;
-      grid-row: 2 /3;
+      grid-row: 2 / 3;
     }
 
     &__item:nth-child(4) {
       grid-column: 6 / 13;
-      grid-row: 2 /3;
+      grid-row: 2 / 3;
     }
   }
 }
@@ -40,20 +40,20 @@
     padding: 50px 0;
   }
 
-  .expectations__grid__item:nth-child(1) {
-    grid-column: 1 / -1;
-    grid-row: 1 / -1;
+  .expectations__grid {
+    max-width: 345px;
+    height: 200px;
+    display: flex;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
   }
 
-  .expectations__grid__item:nth-child(2) {
-    display: none;
-  }
-
-  .expectations__grid__item:nth-child(3) {
-    display: none;
-  }
-
-  .expectations__grid__item:nth-child(4) {
-    display: none;
+  .expectations__grid__item {
+    width: 325px;
+    height: 200px;
+    flex-shrink: 0;
+    position: relative;
+    padding: 0 10px;
+    animation: 10s slidy infinite;
   }
 }
