--- a/portfolio/css/styles.css
+++ b/portfolio/css/styles.css
@@ -66,7 +66,7 @@ a {
     grid-row: 2 / -1;
     color: #fff;
     align-self: end;
-    padding: 0 100px 100px 50px; }
+    padding: 50px 100px 100px 50px; }
 
 @media screen and (max-width: 1024px) {
   .header__photo {
