--- a/portfolio/scss/_header.scss
+++ b/portfolio/scss/_header.scss
@@ -28,7 +28,7 @@
     grid-row: 2 / -1;
     color: #fff;
     align-self: end;
-    padding: 0 100px 100px 50px;
+    padding: 50px 100px 100px 50px;
   }
 }
 
